[gd_scene load_steps=11 format=3 uid="uid://d0wnwi5rcyku"]

[ext_resource type="Theme" uid="uid://dmwrgmv8lathf" path="res://assets/themes/ScreenTheme.tres" id="1_te1yn"]
[ext_resource type="Texture2D" uid="uid://bic3i142epdt3" path="res://assets/art/placeholder_threat.png" id="2_doqwf"]
[ext_resource type="Script" uid="uid://c0bcybnexkh4e" path="res://src/indoor_preparation/screen_displays/shared/character_detail/character_detail.gd" id="2_tnvk2"]
[ext_resource type="Texture2D" uid="uid://c812lqrvhyq01" path="res://assets/art/ATTACK_icon_64x64.png" id="3_cs4wt"]
[ext_resource type="Script" uid="uid://cs5k56oe5f8wj" path="res://src/indoor_preparation/screen_displays/shared/character_detail/character_detail_summary.gd" id="3_q3ltp"]
[ext_resource type="Texture2D" uid="uid://r7a1wa1ifq57" path="res://assets/art/placeholder_close_button.png" id="4_vii54"]
[ext_resource type="PackedScene" uid="uid://cf7gpoxw4lyd4" path="res://src/indoor_preparation/screen_displays/shared/upgrades/upgrade_choice_display.tscn" id="4_vtj8y"]
[ext_resource type="PackedScene" uid="uid://lw7wcqkoqifj" path="res://src/shared_ui/die_result/DieResult.tscn" id="5_mb6um"]
[ext_resource type="Script" uid="uid://cjydm4nr3gk0h" path="res://src/indoor_preparation/screen_displays/shared/character_detail/character_detail_upgrades.gd" id="6_1f48f"]
[ext_resource type="PackedScene" uid="uid://dj3qjxeo1h7wm" path="res://src/indoor_preparation/screen_displays/shared/character_detail/dynamic_info_panel.tscn" id="8_yjqcy"]

[node name="CharacterDetail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_te1yn")
script = ExtResource("2_tnvk2")

[node name="BasicSummary" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.02
theme_override_constants/separation = 10
script = ExtResource("3_q3ltp")

[node name="Portrait" type="TextureRect" parent="BasicSummary"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_doqwf")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BasicSummary"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="BasicSummary/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_te1yn")
theme_override_font_sizes/font_size = 48
text = "Placeholder"
justification_flags = 129

[node name="Description" type="Label" parent="BasicSummary/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Description Text Goes Here"
autowrap_mode = 2

[node name="ActionsBackground" type="PanelContainer" parent="BasicSummary/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="BasicSummary/VBoxContainer/ActionsBackground"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="ActionsPreview" type="HBoxContainer" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Descriptor" type="Label" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview"]
layout_mode = 2
text = "Actions:"

[node name="DieResult" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult2" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult3" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult4" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult5" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult6" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult7" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="DieResult8" parent="BasicSummary/VBoxContainer/ActionsBackground/MarginContainer/ActionsPreview" instance=ExtResource("5_mb6um")]
layout_mode = 2
theme = ExtResource("1_te1yn")

[node name="UpgradeSelection" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.4
anchor_right = 0.3
anchor_bottom = 0.98
script = ExtResource("6_1f48f")

[node name="MarginContainer" type="MarginContainer" parent="UpgradeSelection"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelection/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UpgradeSelection/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "UPGRADES"
horizontal_alignment = 1

[node name="UpgradeChoiceDisplay" parent="UpgradeSelection/MarginContainer/VBoxContainer" instance=ExtResource("4_vtj8y")]
layout_mode = 2

[node name="UpgradeChoiceDisplay2" parent="UpgradeSelection/MarginContainer/VBoxContainer" instance=ExtResource("4_vtj8y")]
layout_mode = 2

[node name="UpgradeChoiceDisplay3" parent="UpgradeSelection/MarginContainer/VBoxContainer" instance=ExtResource("4_vtj8y")]
layout_mode = 2

[node name="UpgradeChoiceDisplay4" parent="UpgradeSelection/MarginContainer/VBoxContainer" instance=ExtResource("4_vtj8y")]
layout_mode = 2

[node name="UpgradeChoiceDisplay5" parent="UpgradeSelection/MarginContainer/VBoxContainer" instance=ExtResource("4_vtj8y")]
layout_mode = 2

[node name="DynamicInfoPanel" parent="." instance=ExtResource("8_yjqcy")]
layout_mode = 1

[node name="IconAndCost" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 25

[node name="CharacterIcon" type="TextureRect" parent="IconAndCost"]
layout_mode = 2
texture = ExtResource("3_cs4wt")
expand_mode = 5
stretch_mode = 4

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.02
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
icon = ExtResource("4_vii54")

[node name="OptionalHeader" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.3
text = "For Hire:"
